Fixed the overflow making it all look weird

--- a/src/styles/global/_main.scss
+++ b/src/styles/global/_main.scss
@@ -40,6 +40,8 @@ small {
 .channelImage {
 	user-select: none;
 	transition: transform 0.2s ease-in-out;
+	overflow: hidden;
+
 	img {
 		border-radius: 15px;
 		margin: 10px;
@@ -52,8 +54,10 @@ small {
 		max-width: 425px;
 	}
 	border-radius: 15px;
-	width: 90vw;
-	height: 120px;
+	max-width: 90vw;
+	max-height: 120px;
+	min-width: 90vw;
+	min-height: 120px;
 	margin: 10px;
 	box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
 	&:hover {
